# libdft-dr

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  ROADMAP.md  branch_pred.h  dr_compat.h  libdft_api_dr.cpp  libdft_api_dr.h  libdft_core_dr.cpp  libdft_core_dr.h  libdft_log.h  mnt_consumer_dr.cpp  mnt_consumer_dr.h  osutils_dr.cpp  osutils_dr.h  sdft_hook_dr.cpp  sdft_hook_dr.h  sdft_summaries_dr.cpp  sdft_summaries_dr.h  syscall_desc_dr.cpp  syscall_desc_dr.h  tagmap.cpp  tagmap.h
.github/workflows/: ci.yml
bench/: BENCHMARKS.md  results.md  run_perf.sh
clients/egress_sanitizer/: CMakeLists.txt  main.cpp
clients/file_introspect/: CMakeLists.txt  main.cpp
clients/synthetic_unit/: CMakeLists.txt  main.cpp
clients/vuzzer_cmp_sink/: CMakeLists.txt  main.cpp
docs/: api-design.md
include/libdft_dr/: libdft64_compat.h  lifecycle.h  sinks.h  sources.h  tag.h
src/: api_lifecycle.cpp  api_sinks.cpp  api_sources.cpp  api_tag.cpp  sink_internal.h
tests/: run_smoke.sh
tests/sut/: magic_check.c
tools/: libdft-dta-dr.cpp
